refactor(runtime): share stage/policy/plan_parse events across eval and SSE
- Add shared runtime events (StageEvent/PolicyEvent/PlanParseEvent) and policy stage anchors
- Emit structured SSE events: plan_parse, stage, policy
- Align eval pipeline stage naming and checkpoint resume semantics; update eval docs and tests

Made-with: Cursor